--- a/concessionaria-carros/app/globals.css
+++ b/concessionaria-carros/app/globals.css
@@ -5,6 +5,40 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+a{
+  text-decoration: none;
+  color: #456875;
+  font-weight: 500;
+}
+
+a:hover{
+  color: #2b4047;;
+}
+
+nav{
+  text-align: center;
+  background-color: #f0f2f3;
+}
+
+nav ul{
+  display: inline-flex;
+  list-style: none;
+}
+
+nav ul li{
+  padding: 0 5px;
+}
+
+nav ul li a{
+  padding: 3px 15px;
+  border-bottom: 2px solid #ccdce2;
+  transition: all .35s;
+}
+
+nav ul li a:hover{
+  border-bottom: 2px solid #456875;
+}
+
 h1{
   text-align: center;
   padding: 50px 0;
@@ -12,10 +46,91 @@ h1{
   margin: 0;
 }
 
-div{
+h2{
+  text-align: center;
+  max-width: 1200px;
+  margin: 25px auto 50px;
+  padding: 15px 0;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.lista-veiculos{
   display: flex;
   margin: 0 auto;
   max-width: 1200px;
   width: 100%;
   align-items: center;
+  border: 1px solid rgb(0 0 0 / 15%);
+}
+
+.lista-veiculos p{
+  padding: 5px 15px;
+  width: 25%;
+}
+
+.btn2{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.btn2 a{
+  padding: 15px 35px;
+  background-color: #456875;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  display: inline-block;
+  transition: all .35s;
+}
+
+.btn2 a:hover{
+  background-color: #2b4047;
+}
+
+table{
+  margin: 50px auto;
+  width: 600px;
+}
+
+tr th{
+  background: #456875;
+  color: #ffffff;
+  height: 40px;
+}
+
+tr td{
+  padding: 10px 10px;
+  background: #f5f5f5;
+}
+
+tr td img{
+  width: 150px;
+}
+
+.card-carro{
+  display: flex;
+  max-width: 1200px;
+  margin: 50px auto 0;
+}
+
+.ft-carro{
+  width: 50%;
+  height: 400px;
+}
+
+.ft-carro img{
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+
+.info-carro{
+  width: 50%;
+  background-color: #f5f5f5;
+  padding: 35px 100px;
+}
+
+footer{
+  text-align: center;
+  margin: 50px 0 20px;
 }
